--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -95,6 +95,10 @@ footer {
                 position: absolute;
                 bottom: 2px;
                 right: 3px;
+
+                &:hover {
+                    box-shadow: 0 0 5px 1px rgba($accent-blue-color,.5);
+                }
     
                 svg {
                     width: 30px;
