--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -41,7 +41,7 @@ footer {
             display: inline-block;
             font-size: .9rem;
 
-            li {
+            a {
                 text-transform: capitalize;
                 cursor: pointer;
 
