--- a/css/_main_body.scss
+++ b/css/_main_body.scss
@@ -25,8 +25,6 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
 .welcome-message {
     position: relative;
     width: 100%;
-    padding: 0;
-    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,15 +34,35 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         text-align: center;
         color: $white-color;
         position: absolute;
-        top: 3em;
+        top: 30%;
         left: auto;
         z-index: 1;
+        padding: 1rem;
+
+        @media screen and (max-width: 955px) {
+            font-size: 1rem;
+        }
+        
+        @media screen and (max-width: 520px) {
+            font-size: .9rem;
+            line-height: 1.2 rem;
+        }
     }
 
     p {
         font-size: 1.5rem;
         line-height: 2rem;
-        top: 8em;
+        top: 50%;
+
+        @media screen and (max-width: 955px) {
+            font-size: 1rem;
+            line-height: 1.6rem;
+        }
+
+        @media screen and (max-width: 520px) {
+            font-size: .9rem;
+            line-height: 1rem;
+        }
     }
 
     img {
@@ -57,8 +75,20 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
 .main-container {
     display: flex;
     justify-content: flex-start;
-    gap: 5%;
-    margin: 2em 5%;
+    gap: 2%;
+    margin: 2em 1%;
+
+    @media screen and (max-width: 940px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    @media screen and (max-width: 740px) {
+        margin: 2em;
+        
+    }
 }
 
 .aside-container {
@@ -67,6 +97,12 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
     justify-content: flex-start;
     flex-flow: column wrap;
     gap: 1em;
+    margin-left: 1em;
+
+    @media screen and (max-width: 940px) {
+        flex-flow: column wrap;
+        margin: 0;
+    }
 
     div {
         display: flex;
@@ -170,9 +206,15 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
 }
 
 .center-container {
-    width: 70%;
+    width: 75%;
     display: flex;
     flex-flow: column wrap;
+
+    @media screen and (max-width: 940px) {
+        justify-content: center;
+        align-items: center;
+        
+    }
     
     .upper-container {
         display: flex;
@@ -182,6 +224,12 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         border-bottom: 1px solid $lines-color;
         padding-bottom: 1em;
         height: fit-content;
+/* 
+        @media screen and (max-width: 940px) {
+            flex-direction: column;
+            gap: 2em;
+            
+        } */
         
         div {
             label {
@@ -230,7 +278,7 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
 
     .middle-container {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-evenly;
         flex-flow: row wrap;
         gap: 2em;
 
@@ -243,6 +291,12 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
             border: 1px solid $lines-color;
             border-radius: 3px;
             margin-top: 2em;
+
+            @media screen and (max-width: 940px) {
+                .card-container {
+
+                }
+            }
 
             &:hover {
                 box-shadow: $cards-shadow;
