--- a/css/_header.scss
+++ b/css/_header.scss
@@ -14,12 +14,20 @@ header {
     padding: 2vh 5vw;
     user-select: none;
     margin: auto 0;
+    position: relative;
+    
 
     nav {
         display: flex;
         justify-content: space-between;
         margin: auto 0;
         line-height: calc(5vh + 3vh);
+
+        @media screen and (max-width: 940px) {
+            flex-flow: column wrap;
+
+            
+        }
 
         .logo {
             display: flex;
@@ -42,6 +50,15 @@ header {
             display: flex;
             justify-content: flex-start;
             gap: 1.5rem;
+
+            @media screen and (max-width: 940px) {
+                flex-flow: column wrap;
+                gap: .2rem;
+            }
+            @media screen and (max-width: 500px) {
+                flex-flow: column wrap;
+                gap: 0;
+            }
             
             li {
                 cursor: pointer;
@@ -69,6 +86,10 @@ header {
             flex-flow: row wrap;
             gap: 1rem;
 
+            @media screen and (max-width: 940px) {
+                flex-flow: column wrap;
+            }
+
             button {
                 background: none;
                 border-style: none;
@@ -87,7 +108,55 @@ header {
                 &:active {
                     outline: none;
                 }
+
+                svg {
+                    width: 30px;
+                    fill: $accent-blue-color;
+
+                    &:hover {
+                        fill: $white-color;
+                    }
+                }
+
+                @media screen and (max-width: 940px) {
+                    flex-flow: column wrap;
+                    padding: 1rem;
+                    display: flex;
+                    justify-content: center;
+                    a {
+                        text-align: center;
+                    }
+                }
+            }
+
+            #menu-toggle {
+                display: none;
+
+                @media screen and (max-width: 940px) {
+                    display: block;
+                    padding: 5px;
+                    position: absolute;
+                    top: 1em;
+                    right: 3em;
+                }
             }
         }
     }
+}
+
+@keyframes menuAnimation {
+    from {
+        border-bottom-left-radius: 50%;
+        transform: translate(-2em, 4em);
+    }
+
+    to{
+        border-radius: initial;
+        transform: translate(initial, initial);
+    }
+}
+
+.hide-menu {
+    display: none;
+    animation: menuAnimation ease 500ms forwards;
 }
